# cookiecutter-python-termapp

./: LICENSE  README  README.md  cookiecutter.json
{{cookiecutter.project_name_hyphenated}}/: README
{{cookiecutter.project_slug}}/: README.md  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/src/: __main__.py
